<resources>
    <string name="app_name">SteadyKopitiam</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_username">Username</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_cart">Cart</string>
    <string name="menu_purchases">Purchases</string>
    <string name="menu_profile">Profile</string>
    <string name="menu_wallet">Wallet</string>
    <string name="menu_about">About</string>

    <string name="email_input_login">Email</string>
    <string name="password_input_login">Password</string>
    <string name="btn_login">Log In</string>
    <string name="btn_signup">Sign Up</string>
    <string name="register_email">Email</string>
    <string name="register_male">Male</string>
    <string name="register_female">Female</string>
    <string name="register_phoneNumber">Phone Number</string>
    <string name="register_name">Name</string>
    <string name="register_height">Height (m)</string>
    <string name="register_weight">Weight (kg)</string>
    <string name="register_age">Age</string>
    <string name="register_password">Password</string>

    <string name="register_dailyActivity">Daily Activities</string>
    <string name="btn_to_register">Register</string>

    // --- id in user profile page --- //
    <string name="edit_username">Username</string>
    <string name="edit_age">Age</string>
    <string name="edit_bmi">BMI</string>
    <string name="edit_phoneNumber">Phone Number</string>
    <string name="carbs_needed"> Carbs Needed</string>
    <string name="protein_needed"> Protein Needed </string>
    <string name="minerals_needed"> Minerals Needed</string>
    <string name="calories_needed">Calories Needed </string>
    <string name="account_balance">Account Balance</string>
    <string name="account_points">Account Points </string>
    <string name="fibre_needed"> Fibre </string>

    // --- foods item --- //
    <string-array name="food1">
        <item>Jamaican Curried Shrimp and Mango Soup</item>
        <item>1</item>

    </string-array>

    // --- food text view in food Item activity --- //
    <string name="foodCarbs">Carbs in g </string>
    <string name="foodProtein">Protein in g</string>
    <string name="foodFibre">Fibre in g</string>
    <string name="foodFat">Fat in g</string>
    <string name="foodVitamins">Vitamins in g</string>
    <string name="foodMinerals">Minerals in g </string>
    <string name="foodCalories">Calories in g </string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="update">Update</string>


</resources>
